# Infinite-Width-NTK-Evolution

./: .gitignore  README.md  pyproject.toml
src/: main.py
src/dynamics/: __init__.py  base_dynamics.py  ntk_gp_dynamics.py
src/kernels/: __init__.py  base_kernel.py  nngp_relu.py  ntk_relu.py
src/plotting/: __init__.py  base_plotter.py  plot_dynamics.py
